<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HistorysActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/term1day"
            android:paddingLeft="10dp"
            android:text="@string/histories"
            android:textSize="24sp"
            />
        <ScrollView
            android:layout_height="fill_parent"
            android:layout_width="fill_parent"
            android:layout_weight="0.8"
            android:id="@+id/scrollView">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="@+id/scrollView"
                >


                <ListView
                    android:id="@+id/onedaylist"
                    android:layout_width="match_parent"
                    android:layout_height="1200dp"
                    android:divider="@null"
                    android:entries="@array/task_list"
                    android:textSize="10sp" />
            </LinearLayout>
        </ScrollView>
        <LinearLayout
            android:id="@+id/Btm_position"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/btToday"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:text="@string/today"
                android:layout_weight="1" />

            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/btCreate"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:text="@string/create"
                android:layout_weight="1" />

            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/btRandom"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:text="@string/random"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>