<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".taskCreate">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="0.8"
            >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/create"
                    />
                <EditText
                    android:id="@+id/newTask"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

                <Button
                    android:id="@+id/btCreateExe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onCreateButtonClick"
                    android:text="@string/create" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/Btm_position"
            android:layout_width="399dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_weight="0.2"
            >

            <Button
                android:id="@+id/btToday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/today"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/btCreate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/btRandom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/random"
                android:layout_weight="1"
                />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>