<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RandomActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/random"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:id="@+id/SetFromNum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    />
                <TextView
                    android:id="@+id/SetToFrom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="〜"
                    android:layout_weight="0.1"
                    android:layout_gravity="center"
                    />
                <TextView
                    android:id="@+id/SetToNum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <Button
                    android:id="@+id/btRandomStart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/random_start"
                    android:layout_weight="0.1"
                    android:onClick="onStartButtonClick"/>
                <TextView
                    android:id="@+id/RandomNum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:layout_weight="0.9"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <EditText
                    android:id="@+id/FromNum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    />
                <TextView
                    android:id="@+id/ToFrom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="〜"
                    android:layout_weight="0.1"
                    android:layout_gravity="center"
                    />
                <EditText
                    android:id="@+id/ToNum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    />
                <Button
                    android:id="@+id/btRandomFromTo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/random_create_btn"
                    android:layout_weight="0.9"
                    android:onClick="CreateRandomNumButtonClick"/>

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/Btm_position"
            android:layout_width="399dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_weight="0.2"
            >

            <Button
                android:id="@+id/btToday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/today"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/btCreate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/btRandom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/random"
                android:layout_weight="1"
                />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>